# designer-ai

./: .env.example  .gitignore  CLAUDE_CODE_BRIEFING.md  agent.py  agent_carousel.py  agent_motion.py  agent_reels.py  agent_ugc.py  api.py  app.py  app_ads.py  app_chat.py  generate.py  generate_ads.py  generate_carousel.py  nixpacks.toml  onboard.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup_fonts.py  video.py
brand_profiles/: box.json  credito-livre.json  force-protocol.json  legado-viking.json  nike.json
claude-project-files/: 01-INSTRUCOES-designer-ai-system-prompt.md  02-KF-design-system.md  03-KF-principios-design.md  04-KF-banco-de-headlines.md  05-KF-filtro-editorial.md  06-KF-manual-de-qualidade.md  07-KF-referencias.md
creator_profiles/: transcriptions.json
creator_profiles/jeffnippard/: transcriptions.json
creator_profiles/kallaway/: transcriptions.json
creator_profiles/rourkeheath/: transcriptions.json
creator_profiles/shein/: transcriptions.json
designer/: __init__.py  config.py
designer/brand/: profile.py  suggester.py
designer/copy/: editorial_filter.py  headlines.py  multilingual.py  slides.py
designer/delivery/: ads_export.py  discord_preview.py  drive.py  figma_export.py  html5_ads.py  whatsapp.py
designer/image/: imagen.py  unsplash.py
designer/knowledge/: references.md  (+5 more)
figma-plugin/: code.js  manifest.json  ui.html
n8n/: _fix_all.py  autopilot_workflow.json  designer_ai_workflow.json  social_autopilot_workflow.json  update_workflow_url.py
tests/: test_cover.py  test_html5_ads.py  test_html5_i18n.py
(+15 files in other folders)
